@@ -352,8 +352,8 @@ options = array(
 			$def_ptions = array(
 				'nodeids' => $this->config['all_nodes'] ? get_current_nodeid() : null,
 				'output' => API_OUTPUT_EXTEND,
-				'groupids' => ((($this->groupid > 0) && ($this->hostid == 0)) ? $this->groupid : null),
-				'hostids' => (($this->hostid > 0) ? $this->hostid : null),
+				'groupids' => $this->groupid > 0 && $this->hostid == 0 ? $this->groupid : null,
+				'hostids' => $this->hostid > 0 ? $this->hostid : null
 			);
 			$options = zbx_array_merge($def_ptions, $options);
 			$graphs = API::Graph()->get($options);
@@ -365,7 +365,24 @@ options = array(
 
 			if(is_null($graphid)) $graphid = $this->_profileIds['graphid'];
 
-			$graphid = isset($this->data['graphs'][$graphid]) ? $graphid : 0;
+			// if there is no graph with given id in selected host
+			if(!isset($this->data['graphs'][$graphid])){
+				// then let's take a look how the desired graph is named
+				$options = array(
+					'output' => API_OUTPUT_EXTEND,
+					'graphids' => array($graphid)
+				);
+				$selectedGraphInfo = CGraph::get($options);
+				$selectedGraphInfo = reset($selectedGraphInfo);
+				$graphid = 0;
+				// if there is a graph with the same name on new host, why not show it then?
+				foreach($this->data['graphs'] as $gid => $graph){
+					if($graph === $selectedGraphInfo['name']){
+						$graphid = $gid;
+						break;
+					}
+				}
+			}
 		}
 
 		if(!is_null($this->_requestIds['graphid'])){
